<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_events"
    tools:layout_editor_absoluteX="12dp"
    tools:layout_editor_absoluteY="0dp">

    <Button
        android:id="@+id/add"
        android:layout_width="120dp"
        android:layout_height="64dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="7dp"
        android:text="@string/add_events"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/update"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="120dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="7dp"
        android:text="@string/delete_events"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/update"
        app:layout_constraintTop_toBottomOf="@+id/listperson"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/update"
        android:layout_width="120dp"
        android:layout_height="64dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="7dp"
        android:text="@string/update_events"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintStart_toEndOf="@+id/add" />

    <EditText
        android:id="@+id/edt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/id"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/edt_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" tools:targetApi="o"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/event_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edt_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edt_location"
        app:layout_constraintTop_toBottomOf="@+id/edt_id" tools:targetApi="o"/>

    <EditText
        android:id="@+id/edt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="21dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/event_location"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/listperson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <ListView
        android:id="@+id/listperson"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_location" />

</androidx.constraintlayout.widget.ConstraintLayout>